# yokoi-gameboy-emulator

./: .gitignore  Cargo.toml  README.md  justfile  postboot.yokoistate
src/: audio.rs  cart.rs  cartridge.rs  error.rs  frame.rs  frontend.rs  lib.rs  mem.rs  memory.rs  opcode.rs  register.rs  render.rs  rom.rs  sound.rs  system.rs  timer.rs  util.rs
src/mem/: mbc.rs
src/render/: fetcher.rs  ppu.rs
yokoi-tui/: Cargo.toml
yokoi-tui/src/: debugger.rs  logger.rs  main.rs  tui.rs
