[workspace]
members = ["yokoi-tui"]

[package]
name = "yokoi"
version = "0.1.0"
edition = "2024"
description = "A gameboy emulation library."
license = "MIT"

[dependencies]
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
sha256 = "1.6.0"
tracing = "0.1.44"
