[package]
name = "yokoi-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
yokoi = { version = "0.1.0", path = ".." }
